# BHResist

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: flake8.yml  formatting.yml  tests.yml
bhr/: 2_u_borehole_math.py  borehole.py  coaxial.py  coaxial_borehole.py  double_u_borehole.py  double_u_tube.py  enums.py  fluid.py  pipe.py  single_u_borehole.py  u_tube.py  utilities.py
bhr/tests/: test_bhr.py  test_borehole.py  test_coaxial_borehole.py  test_double_u_borehole.py  test_fluid.py  test_pipe.py  test_single_u_borehole.py  test_u_tube.py
docs/: borehole.rst  coaxial_bh.rst  conf.py  double_bh.rst  index.rst  prog_usage.rst  requirements.txt  single_bh.rst
notebooks/: Comparisons.ipynb  Geometry.ipynb  PipeDiagrams.ipynb  TestFrictionFactor.ipynb  ValidationPlots.ipynb
