[tool.poetry]
name = "BHResist"
version = "0.2.0"
description = "Functionality to compute the thermal resistance of borehole heat exchangers"
authors = ["Matt Mitchell <mitchute@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/NREL/BHResist"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

packages = [
    { include = "bhr" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
SecondaryCoolantProps = "^1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4"
pytest = "^8"
pytest-cov = "^6"
sphinx = "^7"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
